# job_finder_v2

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  logging_config.py  pipeline.py  pyproject.toml  requirements.txt  run.py
agents/: __init__.py  email_tracker.py  form_filler.py  job_scout.py  orchestrator.py  profile_builder.py  resume_writer.py
api/: __init__.py  dependencies.py  main.py  middleware.py  tasks.py
api/routes/: applications.py  apply.py  chat.py  email.py  jobs.py  profile.py  tasks.py
browser/: __init__.py  humanizer.py  proactor_loop.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/api/: client.js
dashboard/src/components/: Layout.jsx
db/: __init__.py  encryption.py  schema.py  store.py
filler/: __init__.py  universal.py
llm/: __init__.py  client.py
mcp_servers/: __init__.py  files_server.py  jobs_server.py  profile_server.py
memory/: __init__.py  application_patterns.py  conversation.py
prompts/: chat_system.md  cover_letter.md  email_classifier.md  fit_scorer.md  form_filler.md  orchestrator.md  profile_builder.md  resume_writer.md
scrapers/: __init__.py  base.py  greenhouse.py  jsearch.py  lever.py
setup/: __init__.py  init_db.py  linkedin_auth.py  seed.py
tests/: __init__.py  conftest.py
tests/e2e/: test_greenhouse_shadow.py
tests/integration/: test_chat_route.py  test_jobs_route.py  test_pipeline.py
tests/unit/: test_conversation_memory.py  test_db_store.py  test_encryption.py  test_fit_scorer.py  test_greenhouse_scraper.py  test_jsearch_scraper.py  test_lever_scraper.py  test_mcp_servers.py  test_profile_builder.py  test_resume_writer.py
utils/: __init__.py  pdf.py  text.py
(+29 files in other folders)
